--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.5.0
+distlib==0.3.4
 Django==4.0.2
 django-crispy-forms==1.14.0
+djangorestframework==3.13.1
+filelock==3.4.2
 Pillow==9.0.1
+platformdirs==2.4.1
+pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
+virtualenv==20.13.0
